# assignment01

./: .env.template  .sqlfluffignore  Answer_backup.sql  DATABASES.md  OA_Script1.sql  README.md  TESTING.md  add-data.md  assingment 1.pgsql  create table in database from geojson  indego-station-statuses.geojson  indego-stations-2021-10-01.csv  ogr2ogr.txt  phl.geojson  pyproject.toml  query01.sql  query02.sql  query03.sql  query04.sql  query05.sql  query06.sql  query07.sql  query08.sql  query09.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query_create.sql  script_1_load_data.sql  station_status.geojson  working_file.sql
.github/workflows/: test-query01.yml  test-query02.yml  test-query03.yml  test-query04.yml  test-query05.yml  test-query06.yml  test-query07.yml  test-query08.yml  test-query09.yml  test-query10.yml  test-query11.yml  test-query12.yml  test-query13.yml
YL_queries/: query01.sql  query02.sql  query03.sql  query05.sql  query08.sql  query09.sql  query11.sql  query12.sql  query14.sql
__scripts__/: create_trip_tables.sql  load_data.sh
__tests__/: test_query01.js  test_query10.js
__tests__/expected_results/: query10desc.csv  query13.csv
data/: draftcode.sql  indego-stations-clean-encode.csv  indego-stations-clean.csv  indego.station_statuses.json  indego_station_statuses.geojson  indego_stations.geojson  initcode.pgsql  phl.geojson  stations.geojson
indego-trips-2021-q3/: indego-stations-2021-10-01.csv
outcome/: query01.csv  query08_result.csv  query09_result.csv  query10_result.csv
